--- a/vUS2/content/theorie.tex
+++ b/vUS2/content/theorie.tex
@@ -17,6 +17,7 @@ Passt die Anregungsfrequenz zur Eigenfrequenz des Kristalls (Resonanzfall), kön
 Umgekehrt kann ein solcher Kristall als Empfänger genutzt werden, da er bei Anregung durch Schallwellen ebenfalls in Schwingung versetzt wird. \\
 
 \subsection{Physikalische Grundlagen der Scanverfahren}
+\label{subsec:Grundlagen}
 Bei Scanverfahren mit Ultraschall wird das Wellenverhalten des Schalls ausgenutzt. Anhand der Medium-abhängigen Schallgeschwindigkeit $c$ können mithilfe der
 Laufzeit $t$ eines Impulssignals und dem Weg-Zeit-Gesetz
 \begin{equation}
