--- a/vUS2/content/diskussion.tex
+++ b/vUS2/content/diskussion.tex
@@ -1,18 +1,24 @@
 \section{Diskussion}
-\label{sec:Diskussion}
-Die Theoriewerte für diesen Versuch wurden händisch mit einem Schieberegler bestimmt. Daher ergibt sich bei allen Theoriewerten eine kleine Unsicherheit, welche 
-nicht bestimmt werden kann. Allerdings sollte diese vernachlässigbar klein sein, weshalb man für diesen Versuch die Theoriewerte als Fixwerte annehmen kann. 
+\label{sec:Diskussion} 
 Zuerst wurden mittels eines A-Scans die Tiefen aller Fehlstellen bestimmt. Bei diesen Werten fällt auf, dass sie um einen näherungsweise konstanten Wert vom Theoriewert abweichen.
-Dies liegt an der Kontaktmittelschicht. Um diesen Fehler auszubessern wurde die Dicke der Kontaktmittelschicht bestimmt. Diese wurde mit einer Ungenauigkeit von $\qty{0.05}{\milli\metre}$
-bestimmt. Aus dieser Ungenauigkeit ergeben sich zwar weitere Unsicherheiten nach Korrektur der Kontaktmittelschicht, allerdings ist dieser Wert hinreichend klein um diese Bestimmung als qualitativ anzusehen. 
-Dies bestätigt sich nach Berechnung der relativen Abweichungen der Tiefen der Fehlstellen. Diese beträgt lediglich $\Delta l = 0.05\%$. Außerdem wurde mittels des A-Scans das
-Auflösungsvermögen unterschiedlicher Sonden untersucht. Hierbei wurde erwartet, dass die Sonde mit höherer Frequenz ein höheres Auflösungsvermögen hat und somit die beiden Peaks 
-seperieren kann. Dies hat sich im \autoref{subsec:auflösung} bestätigt. Bei Bestimmung der Fehlstellen durch den B-Scan treten neben die Fehlerquellen des A-Scans noch weitere Fehler auf.
-Beim B-Scan muss die Tiefe aus einem 2-D Bild bestimmt werden. Dieses Bild kann allerdings nur leicht verschwommen aufgenommen werden, da der Sensor händisch über den Acrylblock bewegt 
-werden muss. Dazu kommt, dass beim Auswerten des Bildes hängt es von subjektiver Abschätzung ab wo der Rand der Fehlstelle liegt. Denn dieser ist durch das verschommene Bild nicht 
-eindeutig sichtbar. Daher ergeben sich bei diesem Verfahren relative Abweichungen zwischen $\Delta l = 0.07\%$ und $\Delta l = 20.9\%$. Dies ist eine große Abstand, weshalb 
-sich dieses Verfahren zur Bestimmung der Fehlstellen weniger bewährt hat, als der A-Scan. Zuletzt wurde ein B-Scan des Brustmodells angefertigt. Bei diesem liegen dieselben Fehler des B-Scans
-vor. Dazu kommt beim Brustmodell noch die schwierigere Messung aufgrund der unebenen Oberfläche. Mit diesem Versuch war es nicht qualitativ möglich das Brustmodell zu untersuchen, 
-aber eine ungefähre Aussage über die Position und Größe lässt sich dennoch treffen. Der Versuch hat zu dem Schluss geführt, dass für ein einfaches Objekt, wie der Acrylblock, 
-der A-Scan eine höhere Präzision hat. Allerdings ist es bei komplexeren Körpern, wie das Brustmodell, mittels eines A-Scan nicht möglich qualitative Aussagen zu treffen, weshalb man
-einen B-Scan benötigt.
+Dies liegt an der Kontaktmittelschicht. Um diesen Fehler auszubessern wurde die Dicke der Kontaktmittelschicht zu $b_\text{A} = \qty{1.19 +- 0.05}{\milli\metre}$ bestimmt. 
+Unter Berücksichtigung dieser Korrektur ergeben sich relative Abweichungen der Tiefen der Fehlstelle, die im Mittel lediglich $\Delta l = 0.05\%$ betragen. 
+
+Im nächsten Teil des Versuches wurde das Auflösungsvermögen verschiedener Sonden untersucht. Hierbei wurde erwartet, dass die Sonde mit höherer Frequenz
+ein höheres Auflösungsvermögen bietet und somit die beiden Peaks 
+seperieren kann. Dies hat sich im \autoref{subsec:auflösung} bestätigt. 
+
+Bei Bestimmung der Fehlstellen durch den B-Scan treten neben den Fehlerquellen des A-Scans noch weitere Ungenauigkeiten auf.
+Beim B-Scan muss die Tiefe aus einem 2D-Bild bestimmt werden, welches jedoch auf Grund der Auflösung verschwommen wirkt. Außerdem führt die manuelle Bewegung der Messsonde
+zu Unregelmäßigkeiten. Zusätzlich lässt sich bei der Auswertung der Bilder teilweise der Beginn einer Fehlstelle nur schwer differenzieren, denn dieser ist durch das 
+verschommene Bild nicht eindeutig sichtbar. Durch diese Fehlerquellen ergeben sich bei diesem Verfahren relative 
+Abweichungen zwischen $\Delta l = 0.07\%$ und $\Delta l = 20.9\%$, weshalb 
+sich dieses Verfahren zur Bestimmung der Fehlstellen weniger bewährt hat als das des A-Scans. 
+
+Zuletzt wurde ein B-Scan des Brustmodells angefertigt. Bei diesem liegen dieselben Fehler des B-Scans
+vor. Darüber hinaus ergibt sich beim Brustmodell eine schwierigere Messung aufgrund der unebenen Oberfläche.
+Eine ungefähre Aussage über die Position und Größe der Tumore lässt sich dennoch treffen. 
+
+Der Versuch hat zu dem Schluss geführt, dass für ein einfaches Objekt, wie den Acrylblock, 
+der A-Scan eine höhere Präzision liefert. Allerdings ist es bei komplexeren Körpern, wie dem Brustmodell, mittels eines A-Scan nicht möglich qualitative Aussagen zu treffen,
+weshalb ein B-Scan benötigt wird.
