nur kleine korrekturen :shit: :heart:

--- a/vUS2/content/auswertung.tex
+++ b/vUS2/content/auswertung.tex
@@ -121,11 +121,11 @@ die einzelnen Tiefen der Fehlstellen zu bestimmen.
 \subsection{Bestimmung der Fehlstellen über einen B-Scan}
 \label{subsec:b_scan}
 Mithilfe eines Brightness-Scans kann eine zweidimensionale Aufnahme des Querschnittes des Acrylblockes erstellt werden. Die gesuchten Fehlstellen erscheinen als 
-weiße Flächen auf der erzeugten Grafik. Anhand eines Maßstabes können anschließend die Distanzen zwischen den Fehlstellen und der Blockoberseite ermittelt werden.
-In den Abbildungen \ref{fig:B_Scan_oben} und \ref{fig:B_Scan_unten} sind die erstellten Aufnahmen zu sehen. Die weiße Linie im unteren viertel der Bilder entspricht
-der Unterseite des Blockes, an welcher ein Teil des Ultraschalles reflektiert wird. Anhand dieser Linie und der bekannten Höhe des Acrylwerkstückes lässt sich ein
+weiße Flächen in der erzeugten Grafik. Anhand eines Maßstabes können anschließend die Distanzen zwischen den Fehlstellen und der Blockoberseite ermittelt werden.
+In den Abbildungen \ref{fig:B_Scan_oben} und \ref{fig:B_Scan_unten} sind die erstellten Aufnahmen zu sehen. Die weiße Linie im unteren Viertel der Bilder entspricht
+der Unterseite des Blockes, an welcher ein Teil des Ultraschalls reflektiert wird. Anhand dieser Linie und der bekannten Höhe des Acrylwerkstückes lässt sich ein
 Maßstab finden, mit welchem die Abstände in Pixeln in metrische Distanzen umgerechnet werden können. Es ist zu beachten, dass zusätzlich zur Höhe des Acrylblockes
-die Dicke der Anpassungsschicht $b_\text{A} = \qty{1.19}{\milli\metre}$ addiert werden muss. diese ist als weiße Schicht an der oberen Kante der Bilder zu erkennen.
+die Dicke der Anpassungsschicht $b_\text{A} = \qty{1.19}{\milli\metre}$ addiert werden muss. Diese ist als weiße Schicht an der oberen Kante der Bilder zu erkennen.
 
 \begin{figure}
   \centering
