--- a/vUS2/content/diskussion.tex
+++ b/vUS2/content/diskussion.tex
@@ -13,7 +13,7 @@ Beim B-Scan muss die Tiefe aus einem 2D-Bild bestimmt werden, welches jedoch auf
 zu Unregelmäßigkeiten. Zusätzlich lässt sich bei der Auswertung der Bilder teilweise der Beginn einer Fehlstelle nur schwer differenzieren, denn dieser ist durch das 
 verschommene Bild nicht eindeutig sichtbar. Durch diese Fehlerquellen ergeben sich bei diesem Verfahren relative 
 Abweichungen zwischen $\Delta l = 0.07\%$ und $\Delta l = 20.9\%$, weshalb 
-sich dieses Verfahren zur Bestimmung der Fehlstellen weniger bewährt hat als das des A-Scans. 
+sich dieses Verfahren zur Bestimmung der Fehlstellen weniger bewährt hat als der A-Scan. 
 
 Zuletzt wurde ein B-Scan des Brustmodells angefertigt. Bei diesem liegen dieselben Fehler des B-Scans
 vor. Darüber hinaus ergibt sich beim Brustmodell eine schwierigere Messung aufgrund der unebenen Oberfläche.
