--- a/vUS2/content/durchfuehrung.tex
+++ b/vUS2/content/durchfuehrung.tex
@@ -2,8 +2,8 @@
 \label{sec:Durchführung}
 In diesem Versuch werden ein Acrylblock und ein Brustmodell mit verschiedenen Ultraschall Scan-Verfahren untersucht. Es genügt nicht die Ultraschallsonde auf das zu untersuchende Material zu halten, da sich dann
 zwischen der Sonde und dem Material eine Luftschicht befindet, wodurch die Messung misslingen würde. Um dies zu vermeiden
-wird eine Koppelmittel auf das Material aufgetragen. Für den Acrylblock wird destilliertes Wasser verwendet.
-Die Dicke dieser Wasserschicht muss jedoch bei der Auswertung berücksichtigt werden, um systematische Abweichungen zu unterbinden.
+wird ein Kontaktmittel auf das Material aufgetragen. Für den Acrylblock wird destilliertes Wasser verwendet.
+Die Dicke dieser Wasserschicht muss jedoch bei der Auswertung berücksichtigt werden, um systematische Abweichungen zu vermeiden.
 
 \subsection{Vorbereitungsaufgaben}
 \label{subsec:VBA}
