--- a/vUS2/content/theorie.tex
+++ b/vUS2/content/theorie.tex
@@ -11,8 +11,8 @@ Schall dieses Frequenzbereiches kann zur zerstörungsfreien Werkstoffprüfung ge
 
 \subsection{Erzeugung von Ultraschall}
 \label{subsec:Erzeugung}
-Um Ultraschall zu erzeugen, kann der \textit{piezo-elektrische Effekt} genutzt werden: Ein piezo-elektrischer Kristall wird in ein elektrisches Wechselfeld gesetzt,
-welches bei paralleler Anordnung einer polaren Achse des Kristalls zu den elektrischen Feldlinien diesen in Schwingung versetzt, wodurch Ultraschallwellen abgestrahlt werden. 
+Um Ultraschall zu erzeugen, kann der \textit{piezo-elektrische Effekt} genutzt werden. Ein piezo-elektrischer Kristall wird in ein elektrisches Wechselfeld gesetzt,
+welches bei paralleler Anordnung einer polaren Achse des Kristalls zu den elektrischen Feldlinien diesen in Schwingung versetzt, wodurch Ultraschallwellen erzeugt werden. 
 Passt die Anregungsfrequenz zur Eigenfrequenz des Kristalls (Resonanzfall), können große Schwingungsamplituden (Schallenergiedichten) erzeugt werden. 
 Umgekehrt kann ein solcher Kristall als Empfänger genutzt werden, da er bei Anregung durch Schallwellen ebenfalls in Schwingung versetzt wird. \\
 
