--- a/vUS3/content/theorie.tex
+++ b/vUS3/content/theorie.tex
@@ -72,3 +72,35 @@ Aufgenommene Messdaten der Signallaufzeit können in einem \textit{A-Scan}, \tex
     \item{Beim \textbf{T}ime-\textbf{M}otion-Scan wird durch Aussenden mehrerer Signale eine Bildfolge aufgenommen. Dies macht es möglich Bewegungen, wie beispielsweise 
     die eines Organs, in dem untersuchten Objekt/Körper sichtbar zu machen.}
 \end{itemize}
+\subsection{Doppler-Effekt}
+\label{subsec:doppler}
+Der Doppler-Effekt beschreibt das Phänomen der Änderung der Wellenlänge, wenn sich Sender und Empfänger relativ zueinander bewegen. Dabei können drei verschiedene Fälle auftreten.
+Im ersten Fall wird angenommen, dass sich der Sender bewegt und sich der Empfänger in Ruhe befindet. Wenn sich der Sender auf den Empfänger zu bewegt, steigt die Frequenz $\nu_{\text{kl}}$. Bewegt 
+sich der Sender jedoch weg von dem Empfänger sinkt die vom Empfänger aufgenommene Frequenz $\nu_{\text{gr}}$.
+\begin{equation*}
+    \nu_{\text{kl/gr}} = \frac{\nu_0}{1 \mp \frac{v}{c}} 
+\end{equation*}
+Im zweiten Fall bewegt sich der Empfänger und der Sender soll sich in Ruhe befinden. Bewegt sich der Empfänger auf den Sender zu steigt die Frequenz $\nu_{\text{h}}$.
+Wenn er sich entfehrnt, dann sinkt die aufgenommene Frequenz $\nu_{\text{n}}$. 
+\begin{equation*}
+    \nu_{\text{h/n}} = \nu_0 \left(1 \pm \frac{v}{c}\right)
+\end{equation*}
+Im dritten Fall ändert sich die Frequenz in Abhängigkeit beider Bewegungen.
+\subsection{Bestimmung der Strömungsgeschwindigkeit}
+\label{subsec:strömung}
+Wird der Doppler-Effekt auf eine Flüssigkeit angewendet, welche mit Ultraschall untersucht wird, so trifft die Welle mit einem Winkel $\alpha$ auf die Flüssigkeit
+und wird dann mit einem Winkel $\beta$ reflektiert. Dabei ändert sich aufgrund des Doppler-Effekts die Frequenz. Die Frequenzänderung kann mittels
+\begin{equation*}
+    \Delta\nu = \nu_0\frac{v}{c}\left(\symup{cos}\,\alpha + \symup{cos}\,\beta\right)
+\end{equation*}
+berechnet werden. $\alpha$ und $\beta$ beschreiben den Winkel zwischen der Wellengeschwindigkeit und der Wellennormalen. Verwendet man das Ultraschalloskop 
+im Impuls-Echo-Verfahren gilt $\alpha = \beta$, sodass sich die Frequenzänderung durch 
+\begin{equation}
+    \Delta\nu = 2\nu_0\frac{v}{c}\symup{cos}\,\alpha
+\end{equation}
+berechnet werden kann. Der Winkel $\alpha$ kann aus dem Brehungsgesetz hergeleitet werden. Mit den Schallgeschwindigkeiten der beiden Grenzmedien $c_\text{L}$ und $c_\text{P}$
+kann der Winkel $\alpha$ im Bogenmaß berechnet werden. 
+\begin{equation}
+    \label{eqn:alpha}
+    \alpha = \frac{\pi}{2} - \symup{arcsin}\left(\symup{sin}\,\frac{c_\text{L}}{c_\text{P}}\right)
+\end{equation}
